[package]
name = "gw_signal"
version = "0.1.2"
edition = "2021"
description = "Package with signal processing tools for graviational waves studies"
license = "Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3.1"
num = "0.4.1"
rand = "0.8.5"
rand_distr = "0.4.3"
rustfft = "6.2.0"
