[package]
name = "gw_signal"
version = "0.1.5"
edition = "2021"
description = "Package with signal processing tools for graviational waves studies"
license = "Apache-2.0"

#[package.metadata.docs.rs]
#rustdoc-args = [
#	"--html-in-header",
#	".cargo/registry/src/github.com-1ecc6299db9ec823/katex-doc-0.1.0/katex.html",
#]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3.1"
num = "0.4.0"
plotters = "0.3.5"
rand = "0.8.5"
rand_distr = "0.4.3"
rustfft = "6.2.0"
