[package]
name = "gw_signal"
version = "0.1.9-alpha.1"
edition = "2021"
description = "Package with signal processing tools for graviational waves studies"
license = "Apache-2.0"

[package.metadata.docs.rs]
all-features = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
more-asserts = "0.3.1"
num = "0.4.0"
rand = "0.8.5"
rand_distr = "0.4.3"
rustfft = "6.2.0"
#plotters = "0.3.5"
